--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -52,13 +52,13 @@ involvement).  </p>
       <p>Similarly, the <span class="repeated">prov:qualifiedAssociation</span> property parallels the <span class="repeated">prov:wasAssociatedWith</span> property, and references an instance of <span class="repeated">prov:Association</span> that provides attributes of the <span class="repeated">prov:wasAssociatedWith</span> relation between the Activity and Agent. The <span class="repeated">prov:agent</span> property is used to cite the Agent that was involved in the Activity. In this case, the plan that the Agent used is provided using the <span class="repeated">prov:hadPlan</span> property and an instance of <span class="repeated">prov:Plan</span>.
       </p>
 
-       <div style="text-align: center;" class="figure">
+       <div id="qualified-terms-figure" style="text-align: center;" class="figure">
             <!-- When publishing to w3c: replace prov-o-diagrams/ with diagrams/ -->
             <!--img src="prov-o-diagrams/Qualified-Association.png"-->
             <img src="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/diagram-history/2012-05-03/qualified-patterns.svg"
                  style="width: 100%; min-width: 25em; max-width: 60em" 
                  alt="Express association between an activity and an agent using a binary relationship and an alternatie qualified relationship"/>
-            <div class="figcaption">Figure 2. </div>
+            <div class="figcaption"><a href="#qualified-terms-figure">Figure 3</a>. </div>
        </div>
 
       <p>The following two examples show the result of applying the Usage and Association patterns to the chart making example from <a href=#description-starting-point-terms>Section 3.1</a>.
