--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -23,13 +23,13 @@
 
       <p>An Agent can be responsible for an Activity or an Entity (described using the properties <a href='#wasAssociatedWith' class="qname">prov:wasAssociatedWith</a> and <a href='#wasAttributedTo' class="qname">prov:wasAttributedTo</a>, respectively). Agents can also be responsible for other Agents' actions. In this case, the Agent involved with an Activity or Entity <a href='#actedOnBehalfOf' class="qname">prov:actedOnBehalfOf</a> another Agent that may have been less involved, but still bears some responnsibility for the Activity or Entity.
 
-      <div style="text-align: center;" class="figure">
+      <div id="starting-points-figure" style="text-align: center;" class="figure">
             <!-- When publishing to w3c: replace prov-o-diagrams/ with diagrams/ -->
             <!--img src="prov-o-diagrams/Starting-points-terms.png"-->
             <img src="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/diagram-history/2012-05-03/starting-points.svg"
                  style="width: 50%; min-width: 25em; max-width: 60em" 
                  alt="PROV-O Starting Point terms"/>
-            <div class="figcaption">Figure 1. The three Starting Point classes and the properties that relate them.</div>
+            <div class="figcaption"><a href="#starting-points-figure">Figure 1</a>. The three Starting Point classes and the properties that relate them.</div>
       </div>
 
         <div about="#narrative-example-simple-1" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
