--- a/components/services/prov-o/includes/at-a-glance-collections.html
+++ b/components/services/prov-o/includes/at-a-glance-collections.html
@@ -44,14 +44,17 @@
     <li class="object-property">
       <a href="#inserted">prov:inserted</a>
     </li>
-    <li class="datatype-property">
-      <a href="#key">prov:key</a>
-    </li>
     <li class="object-property">
       <a href="#member">prov:member</a>
     </li>
     <li class="object-property">
       <a href="#membership">prov:membership</a>
+    </li>
+    <li class="datatype-property">
+      <a href="#pairKey">prov:pairKey</a>
+    </li>
+    <li class="object-property">
+      <a href="#pairValue">prov:pairValue</a>
     </li>
     <li class="object-property">
       <a href="#qualifiedInsertion">prov:qualifiedInsertion</a>
@@ -61,9 +64,6 @@
     </li>
     <li class="datatype-property">
       <a href="#removedKey">prov:removedKey</a>
-    </li>
-    <li class="object-property">
-      <a href="#value">prov:value</a>
     </li>
   </ul>
 </div>
