--- a/components/services/prov-o/includes/at-a-glance-expanded.html
+++ b/components/services/prov-o/includes/at-a-glance-expanded.html
@@ -9,9 +9,6 @@
       <a href="#Location">prov:Location</a>
     </li>
     <li>
-      <a href="#Note">prov:Note</a>
-    </li>
-    <li>
       <a href="#Organization">prov:Organization</a>
     </li>
     <li>
@@ -35,11 +32,14 @@
     <li class="object-property">
       <a href="#generated">prov:generated</a>
     </li>
+    <li class="datatype-property">
+      <a href="#generatedAtTime">prov:generatedAtTime</a>
+    </li>
     <li class="object-property">
       <a href="#hadOriginalSource">prov:hadOriginalSource</a>
     </li>
-    <li class="object-property">
-      <a href="#hasAnnotation">prov:hasAnnotation</a>
+    <li class="datatype-property">
+      <a href="#invalidatedAtTime">prov:invalidatedAtTime</a>
     </li>
     <li class="object-property">
       <a href="#specializationOf">prov:specializationOf</a>
@@ -47,8 +47,14 @@
     <li class="object-property">
       <a href="#tracedTo">prov:tracedTo</a>
     </li>
+    <li class="datatype-property">
+      <a href="#value">prov:value</a>
+    </li>
     <li class="object-property">
       <a href="#wasEndedBy">prov:wasEndedBy</a>
+    </li>
+    <li class="object-property">
+      <a href="#wasInvalidatedBy">prov:wasInvalidatedBy</a>
     </li>
     <li class="object-property">
       <a href="#wasQuotedFrom">prov:wasQuotedFrom</a>
