--- a/components/services/prov-o/includes/at-a-glance-qualified.html
+++ b/components/services/prov-o/includes/at-a-glance-qualified.html
@@ -60,9 +60,6 @@
       <a href="#Start">prov:Start</a>
     </li>
     <li>
-      <a href="#StartByActivity">prov:StartByActivity</a>
-    </li>
-    <li>
       <a href="#Trace">prov:Trace</a>
     </li>
     <li>
@@ -96,12 +93,6 @@
       <a href="#hadPlan">prov:hadPlan</a>
     </li>
     <li class="object-property">
-      <a href="#hadQuoted">prov:hadQuoted</a>
-    </li>
-    <li class="object-property">
-      <a href="#hadQuoter">prov:hadQuoter</a>
-    </li>
-    <li class="object-property">
       <a href="#hadRole">prov:hadRole</a>
     </li>
     <li class="object-property">
@@ -132,6 +123,9 @@
       <a href="#qualifiedGeneration">prov:qualifiedGeneration</a>
     </li>
     <li class="object-property">
+      <a href="#qualifiedInvalidation">prov:qualifiedInvalidation</a>
+    </li>
+    <li class="object-property">
       <a href="#qualifiedQuotation">prov:qualifiedQuotation</a>
     </li>
     <li class="object-property">
@@ -147,16 +141,10 @@
       <a href="#qualifiedStart">prov:qualifiedStart</a>
     </li>
     <li class="object-property">
-      <a href="#qualifiedStartByActivity">prov:qualifiedStartByActivity</a>
-    </li>
-    <li class="object-property">
       <a href="#qualifiedTrace">prov:qualifiedTrace</a>
     </li>
     <li class="object-property">
       <a href="#qualifiedUsage">prov:qualifiedUsage</a>
-    </li>
-    <li class="object-property">
-      <a href="#wasApprovedBy">prov:wasApprovedBy</a>
     </li>
   </ul>
 </div>
