--- a/components/services/prov-o/includes/qualifed-forms-expanded.html
+++ b/components/services/prov-o/includes/qualifed-forms-expanded.html
@@ -25,6 +25,12 @@
     <td><a title="http://www.w3.org/ns/prov#entity" href="#entity" class="owlproperty">prov:entity</a></td>
   </tr>
   <tr>
+    <td><a title="http://www.w3.org/ns/prov#wasInvalidatedBy" href="#wasInvalidatedBy" class="owlproperty">prov:wasInvalidatedBy</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedInvalidation" href="#qualifiedInvalidation" class="owlproperty">prov:qualifiedInvalidation</a></td>
+    <td><a title="http://www.w3.org/ns/prov#Invalidation" href="#Invalidation" class="owlclass">prov:Invalidation</a></td>
+    <td><a title="http://www.w3.org/ns/prov#activity" href="#activity" class="owlproperty">prov:activity</a></td>
+  </tr>
+  <tr>
     <td><a title="http://www.w3.org/ns/prov#wasQuotedFrom" href="#wasQuotedFrom" class="owlproperty">prov:wasQuotedFrom</a></td>
     <td><a title="http://www.w3.org/ns/prov#qualifiedQuotation" href="#qualifiedQuotation" class="owlproperty">prov:qualifiedQuotation</a></td>
     <td><a title="http://www.w3.org/ns/prov#Quotation" href="#Quotation" class="owlclass">prov:Quotation</a></td>
