renamed account to bundle

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -63,7 +63,7 @@
 		   <p>
 		   Shortly after Derek's post publication, ex:monica adapts the text for a wider audience in a new version (<code>ex:post9821v2</code>). This version is an specialization of the original post,
 		   and an alternate of the first version modified by Derek. Since the provenance produced by Derek and Monica is related to the same resources, the system
-		   automatically groups it in the same <a href="#Account" class="qname">prov:Account</a> (<code>ex:accountPost</code>).
+		   automatically groups it in the same <a href="#Bundle" class="qname">prov:Bundle</a> (<code>ex:bundlePost</code>).
 		   </p>
 		   
          <div about="#narrative-example-expanded-2" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
@@ -75,10 +75,10 @@
 		   
 		   <p>
 		   Agent <code>ex:John</code> also names the URI of the original source (<code>ex:aggregatedByRegions</code>). All the provenance statements related to his post
-		   are grouped in a new <span class="repeated">prov:Account</span> (<code>ex:accountPost2</code>).
+		   are grouped in a new <span class="repeated">prov:Bundle</span> (<code>ex:bundlePost2</code>).
 		   
 		   Finally, a web crawler (<code>ex:boogleParser</code>) parses the second post. The crawler acts in behalf of Boogle, an organization that want to index the posts. It also adds an 
-		   annotation on the second account (<code>ex:accountPost2</code>), stating at which date the parsing was made.
+		   annotation on the second bundle (<code>ex:bundlePost2</code>), stating at which date the parsing was made.
 		   </p> 		   
 		   
          <div about="#narrative-example-expanded-3" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
