--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -12,18 +12,18 @@
             <div class="figcaption"><a href="#expanded-terms-figure">Figure 2</a>. The expanded terms build upon those in the Starting Points section.</div>
       </div>
 
-      <p>Three popular subclasses of Agent are provided: <a href="#Person" class="qname">prov:Person</a>, <a href="#Organization" class="qname">prov:Organization</a>, and <a href="#SoftwareAgent" class="qname">prov:SoftwareAgent</a>. These classes are not disjoint and may overlap. Further, Agents may be Entities, in cases where one wishes to describe the provenance of Agents.
+      <p>Three common subclasses of Agent are provided: <a href="#Person" class="qname">prov:Person</a>, <a href="#Organization" class="qname">prov:Organization</a>, and <a href="#SoftwareAgent" class="qname">prov:SoftwareAgent</a>. These classes are not disjoint and may overlap. Further, Agents may be Entities, in cases where one wishes to describe the provenance of Agents.
       </p>
  
       <p>
-      Similarly to how Activities have start and end times, Entities may be bound by points in time for which it was generated or is no longer usable (described by properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a> and <a href="#invalidatedAtTime" class="qname">prov:invalidatedAtTime</a>, respectively). For example, a painting could not have been displayed before it was painted, and it cannot be sold after it is destroyed by fire. The property <a href="#wasInvalidatedBy" class="qname">prov:wasInvalidatedBy</a> may be used to cite the Activity that invalidated any further uses of an Entity.
+      Similarly to how Activities have start and end times, an Entity may be bound by points in time for which it was generated or is no longer usable (described by properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a> and <a href="#invalidatedAtTime" class="qname">prov:invalidatedAtTime</a>, respectively). For example, a painting could not have been displayed before it was painted, and it cannot be sold after it is destroyed by fire. The property <a href="#wasInvalidatedBy" class="qname">prov:wasInvalidatedBy</a> may be used to cite the Activity that invalidated any further uses of an Entity.
       </p>
 
       <p>
       Three subproperties of <span class="repeated">prov:wasDerivedFrom</span> are provided: <a href="#wasQuotedFrom" class="qname">prov:wasQuotedFrom</a>, <a href="#wasRevisionOf" class="qname">prov:wasRevisionOf</a>, and <a href="#hadOriginalSource" class="qname">prov:hadOriginalSource</a>. <span class="repeated">prov:wasQuotedFrom</span> cites a potentially larger Entity (such as a Book, or Blog) from which a quote was taken, <span class="repeated">prov:wasRevisionOf</span> cites an older version of a revised Entity, and <span class="repeated">prov:hadOriginalSource</span> cites the Entity that is closest to the person, information, period, or idea being studied (such as a news article that "broke the story"). The property <a href="#tracedTo" class="qname">prov:tracedTo</a> is a superproperty of all four of these properties, and is transitive.
       </p>
 
-      <p> <a href="#specializationOf" class="qname">prov:specializationOf</a> and <a href="#alternateOf" class="qname">prov:alternateOf</a> relate Entities that exist at different levels of specificity. While <span class="repeated">prov:specializationOf</span> links a more specific Entity to a more general one (e.g., today's BBC news home page versus BBC's news home page on any day), <span class="repeated">prov:alternateOf</span> links Entities that present aspects of the same thing, but not necessarily the same aspects or at the same time.
+      <p> <a href="#specializationOf" class="qname">prov:specializationOf</a> and <a href="#alternateOf" class="qname">prov:alternateOf</a> relate Entities that exist at different levels of specificity. While <span class="repeated">prov:specializationOf</span> links a more specific Entity to a more general one (e.g., today's BBC news home page versus BBC's news home page on any day), <span class="repeated">prov:alternateOf</span> links Entities that present aspects of the same thing, but not necessarily the same aspects or at the same time (e.g., the serialization of a document in different formats).
 		</p>
 
       <p>
