update from dani

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -77,12 +77,12 @@
 		   Agent <code>ex:John</code> also names the URI of the original source (<code>ex:aggregatedByRegions</code>). All the provenance statements related to his post
 		   are grouped in a new <span class="repeated">prov:Bundle</span> (<code>ex:bundlePost2</code>).
 		   
-		   Finally, a web crawler (<code>ex:boogleParser</code>) parses the second post. The crawler acts in behalf of Boogle, an organization that want to index the posts. It also adds an 
-		   annotation on the second bundle (<code>ex:bundlePost2</code>), stating at which date the parsing was made.
+		   Unfortunately, there is a problem in the servers where <code>:post19201</code> is being stored, and all the data related to the post is lost. Thus, the system
+		   invalidates the entity automatically and notifies John about the error.
 		   </p> 		   
 		   
          <div about="#narrative-example-expanded-3" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-            <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-25-extended-crime-file-example/rdf/extended-crime-file-pt3.ttl"
-                 class="example">{% escape %}{% include "includes/prov/examples/eg-25-extended-crime-file-example/rdf/extended-crime-file-pt3.ttl" %}{% endescape %}</pre>
+            <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-25-extended-crime-file-example/rdf/extended-crime-file-pt4.ttl"
+                 class="example">{% escape %}{% include "includes/prov/examples/eg-25-extended-crime-file-example/rdf/extended-crime-file-pt4.ttl" %}{% endescape %}</pre>
          </div>
 	  </section>
