added link to qual rel pattern

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -4,7 +4,7 @@
        <p>The classes and properties in the Qualified terms category are for
 users who wish to provide additional details about the relationships between
 entities, activities, and agents.  The terms in this category are the result of
-applying the <strong>Qualification Pattern</strong> to the simple (unqualified)
+applying the <strong>Qualification Pattern</strong> [[LD-Patterns-QR]] to the simple (unqualified)
 relations available in the <a
 href="#prov-starting-point-owl-terms-at-a-glance">Starting
 Point</a> and <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a>
