--- a/components/services/prov-o/includes/at-a-glance-qualified.html
+++ b/components/services/prov-o/includes/at-a-glance-qualified.html
@@ -18,6 +18,9 @@
       <a href="#Communication">prov:Communication</a>
     </li>
     <li>
+      <a href="#Delegation">prov:Delegation</a>
+    </li>
+    <li>
       <a href="#Derivation">prov:Derivation</a>
     </li>
     <li>
@@ -43,9 +46,6 @@
     </li>
     <li>
       <a href="#Quotation">prov:Quotation</a>
-    </li>
-    <li>
-      <a href="#Responsibility">prov:Responsibility</a>
     </li>
     <li>
       <a href="#Revision">prov:Revision</a>
@@ -114,6 +114,9 @@
       <a href="#qualifiedCommunication">prov:qualifiedCommunication</a>
     </li>
     <li class="object-property">
+      <a href="#qualifiedDelegation">prov:qualifiedDelegation</a>
+    </li>
+    <li class="object-property">
       <a href="#qualifiedDerivation">prov:qualifiedDerivation</a>
     </li>
     <li class="object-property">
@@ -127,9 +130,6 @@
     </li>
     <li class="object-property">
       <a href="#qualifiedQuotation">prov:qualifiedQuotation</a>
-    </li>
-    <li class="object-property">
-      <a href="#qualifiedResponsibility">prov:qualifiedResponsibility</a>
     </li>
     <li class="object-property">
       <a href="#qualifiedRevision">prov:qualifiedRevision</a>
