--- a/components/services/prov-o/includes/qualifed-forms-starting-point.html
+++ b/components/services/prov-o/includes/qualifed-forms-starting-point.html
@@ -8,8 +8,8 @@
   </tr>
   <tr>
     <td><a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf" class="owlproperty">prov:actedOnBehalfOf</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedResponsibility" href="#qualifiedResponsibility" class="owlproperty">prov:qualifiedResponsibility</a></td>
-    <td><a title="http://www.w3.org/ns/prov#Responsibility" href="#Responsibility" class="owlclass">prov:Responsibility</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedDelegation" href="#qualifiedDelegation" class="owlproperty">prov:qualifiedDelegation</a></td>
+    <td><a title="http://www.w3.org/ns/prov#Delegation" href="#Delegation" class="owlclass">prov:Delegation</a></td>
     <td><a title="http://www.w3.org/ns/prov#agent" href="#agent" class="owlproperty">prov:agent</a></td>
   </tr>
   <tr>
