added prov-o rdfa to inverse table

--- a/components/services/prov-o/includes/cross-reference-starting-point.html
+++ b/components/services/prov-o/includes/cross-reference-starting-point.html
@@ -28,28 +28,28 @@
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#qualifiedStart" href="#qualifiedStart">prov:qualifiedStart</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#generated" href="#generated">prov:generated</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#endedAtTime" href="#endedAtTime">prov:endedAtTime</a> <sup class="type-dp" title="data property">dp</sup>
+        , <a title="http://www.w3.org/ns/prov#wasAssociatedWith" href="#wasAssociatedWith">prov:wasAssociatedWith</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#qualifiedAssociation" href="#qualifiedAssociation">prov:qualifiedAssociation</a> <sup class="type-op" title="object property">op</sup>
         , <a title="http://www.w3.org/ns/prov#wasEndedBy" href="#wasEndedBy">prov:wasEndedBy</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#qualifiedUsage" href="#qualifiedUsage">prov:qualifiedUsage</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#used" href="#used">prov:used</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#qualifiedEnd" href="#qualifiedEnd">prov:qualifiedEnd</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#qualifiedStart" href="#qualifiedStart">prov:qualifiedStart</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy">prov:wasStartedBy</a> <sup class="type-op" title="object property">op</sup>
         , <a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy">prov:wasInformedBy</a> <sup class="type-op" title="object property">op</sup>
         , <a title="http://www.w3.org/ns/prov#startedAtTime" href="#startedAtTime">prov:startedAtTime</a> <sup class="type-dp" title="data property">dp</sup>
         , <a title="http://www.w3.org/ns/prov#qualifiedCommunication" href="#qualifiedCommunication">prov:qualifiedCommunication</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy">prov:wasStartedBy</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#generated" href="#generated">prov:generated</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#qualifiedAssociation" href="#qualifiedAssociation">prov:qualifiedAssociation</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#wasAssociatedWith" href="#wasAssociatedWith">prov:wasAssociatedWith</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#qualifiedEnd" href="#qualifiedEnd">prov:qualifiedEnd</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#used" href="#used">prov:used</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#qualifiedUsage" href="#qualifiedUsage">prov:qualifiedUsage</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#endedAtTime" href="#endedAtTime">prov:endedAtTime</a> <sup class="type-dp" title="data property">dp</sup>
       </dd>
 
       <dt>in range of</dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy">prov:wasInformedBy</a> <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#activity" href="#activity">prov:activity</a> <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy">prov:wasInformedBy</a> <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy">prov:wasGeneratedBy</a> <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#wasInvalidatedBy" href="#wasInvalidatedBy">prov:wasInvalidatedBy</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#activity" href="#activity">prov:activity</a> <sup class="type-op" title="object property">op</sup>
       </dd>
     </dl>
   </div>
@@ -125,51 +125,51 @@
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#qualifiedQuotation" href="#qualifiedQuotation">prov:qualifiedQuotation</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#qualifiedSource" href="#qualifiedSource">prov:qualifiedSource</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#value" href="#value">prov:value</a> <sup class="type-dp" title="data property">dp</sup>
-        , <a title="http://www.w3.org/ns/prov#qualifiedGeneration" href="#qualifiedGeneration">prov:qualifiedGeneration</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#generatedAtTime" href="#generatedAtTime">prov:generatedAtTime</a> <sup class="type-dp" title="data property">dp</sup>
-        , <a title="http://www.w3.org/ns/prov#wasQuotedFrom" href="#wasQuotedFrom">prov:wasQuotedFrom</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#qualifiedInvalidation" href="#qualifiedInvalidation">prov:qualifiedInvalidation</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#hadOriginalSource" href="#hadOriginalSource">prov:hadOriginalSource</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#alternateOf" href="#alternateOf">prov:alternateOf</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#wasRevisionOf" href="#wasRevisionOf">prov:wasRevisionOf</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#invalidatedAtTime" href="#invalidatedAtTime">prov:invalidatedAtTime</a> <sup class="type-dp" title="data property">dp</sup>
+        <a title="http://www.w3.org/ns/prov#invalidatedAtTime" href="#invalidatedAtTime">prov:invalidatedAtTime</a> <sup class="type-dp" title="data property">dp</sup>
         , <a title="http://www.w3.org/ns/prov#tracedTo" href="#tracedTo">prov:tracedTo</a> <sup class="type-op" title="object property">op</sup>
         , <a title="http://www.w3.org/ns/prov#qualifiedTrace" href="#qualifiedTrace">prov:qualifiedTrace</a> <sup class="type-op" title="object property">op</sup>
         , <a title="http://www.w3.org/ns/prov#qualifiedRevision" href="#qualifiedRevision">prov:qualifiedRevision</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy">prov:wasGeneratedBy</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#value" href="#value">prov:value</a> <sup class="type-dp" title="data property">dp</sup>
+        , <a title="http://www.w3.org/ns/prov#qualifiedInvalidation" href="#qualifiedInvalidation">prov:qualifiedInvalidation</a> <sup class="type-op" title="object property">op</sup>
         , <a title="http://www.w3.org/ns/prov#wasDerivedFrom" href="#wasDerivedFrom">prov:wasDerivedFrom</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#specializationOf" href="#specializationOf">prov:specializationOf</a> <sup class="type-op" title="object property">op</sup>
         , <a title="http://www.w3.org/ns/prov#qualifiedDerivation" href="#qualifiedDerivation">prov:qualifiedDerivation</a> <sup class="type-op" title="object property">op</sup>
         , <a title="http://www.w3.org/ns/prov#wasAttributedTo" href="#wasAttributedTo">prov:wasAttributedTo</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#specializationOf" href="#specializationOf">prov:specializationOf</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#qualifiedAttribution" href="#qualifiedAttribution">prov:qualifiedAttribution</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#generatedAtTime" href="#generatedAtTime">prov:generatedAtTime</a> <sup class="type-dp" title="data property">dp</sup>
+        , <a title="http://www.w3.org/ns/prov#alternateOf" href="#alternateOf">prov:alternateOf</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy">prov:wasGeneratedBy</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#qualifiedQuotation" href="#qualifiedQuotation">prov:qualifiedQuotation</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#qualifiedSource" href="#qualifiedSource">prov:qualifiedSource</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#qualifiedGeneration" href="#qualifiedGeneration">prov:qualifiedGeneration</a> <sup class="type-op" title="object property">op</sup>
         , <a title="http://www.w3.org/ns/prov#wasInvalidatedBy" href="#wasInvalidatedBy">prov:wasInvalidatedBy</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#qualifiedAttribution" href="#qualifiedAttribution">prov:qualifiedAttribution</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#wasQuotedFrom" href="#wasQuotedFrom">prov:wasQuotedFrom</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#hadOriginalSource" href="#hadOriginalSource">prov:hadOriginalSource</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#wasRevisionOf" href="#wasRevisionOf">prov:wasRevisionOf</a> <sup class="type-op" title="object property">op</sup>
       </dd>
 
       <dt>in range of</dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#alternateOf" href="#alternateOf">prov:alternateOf</a> <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy">prov:wasStartedBy</a> <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#wasQuotedFrom" href="#wasQuotedFrom">prov:wasQuotedFrom</a> <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#hadOriginalSource" href="#hadOriginalSource">prov:hadOriginalSource</a> <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#tracedTo" href="#tracedTo">prov:tracedTo</a> <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#wasRevisionOf" href="#wasRevisionOf">prov:wasRevisionOf</a> <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#generated" href="#generated">prov:generated</a> <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#wasDerivedFrom" href="#wasDerivedFrom">prov:wasDerivedFrom</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#hadOriginalSource" href="#hadOriginalSource">prov:hadOriginalSource</a> <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#pairValue" href="#pairValue">prov:pairValue</a> <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#entity" href="#entity">prov:entity</a> <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#specializationOf" href="#specializationOf">prov:specializationOf</a> <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#wasEndedBy" href="#wasEndedBy">prov:wasEndedBy</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#tracedTo" href="#tracedTo">prov:tracedTo</a> <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#used" href="#used">prov:used</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#alternateOf" href="#alternateOf">prov:alternateOf</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy">prov:wasStartedBy</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#wasQuotedFrom" href="#wasQuotedFrom">prov:wasQuotedFrom</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#wasEndedBy" href="#wasEndedBy">prov:wasEndedBy</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#wasRevisionOf" href="#wasRevisionOf">prov:wasRevisionOf</a> <sup class="type-op" title="object property">op</sup>
       </dd>
 
       <dt>has subclasses</dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#Dictionary" href="#Dictionary" class="owlclass">prov:Dictionary</a>
+        <a title="http://www.w3.org/ns/prov#Bundle" href="#Bundle" class="owlclass">prov:Bundle</a>
         , <a title="http://www.w3.org/ns/prov#Plan" href="#Plan" class="owlclass">prov:Plan</a>
-        , <a title="http://www.w3.org/ns/prov#Bundle" href="#Bundle" class="owlclass">prov:Bundle</a>
+        , <a title="http://www.w3.org/ns/prov#Dictionary" href="#Dictionary" class="owlclass">prov:Dictionary</a>
       </dd>
     </dl>
   </div>
@@ -622,10 +622,10 @@
               <a title="http://www.w3.org/ns/prov#hadOriginalSource" href="#hadOriginalSource" class="owlclass">prov:hadOriginalSource</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#derivedByRemovalFrom" href="#derivedByRemovalFrom" class="owlclass">prov:derivedByRemovalFrom</a>
+              <a title="http://www.w3.org/ns/prov#wasRevisionOf" href="#wasRevisionOf" class="owlclass">prov:wasRevisionOf</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#wasRevisionOf" href="#wasRevisionOf" class="owlclass">prov:wasRevisionOf</a>
+              <a title="http://www.w3.org/ns/prov#derivedByRemovalFrom" href="#derivedByRemovalFrom" class="owlclass">prov:derivedByRemovalFrom</a>
             </li>
           </ul>
         </dd>
