--- a/components/services/prov-o/includes/cross-reference-qualified.html
+++ b/components/services/prov-o/includes/cross-reference-qualified.html
@@ -34,9 +34,9 @@
 
       <dt>has subclasses</dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#Invalidation" href="#Invalidation" class="owlclass">prov:Invalidation</a>
+        <a title="http://www.w3.org/ns/prov#Generation" href="#Generation" class="owlclass">prov:Generation</a>
+        , <a title="http://www.w3.org/ns/prov#Invalidation" href="#Invalidation" class="owlclass">prov:Invalidation</a>
         , <a title="http://www.w3.org/ns/prov#Communication" href="#Communication" class="owlclass">prov:Communication</a>
-        , <a title="http://www.w3.org/ns/prov#Generation" href="#Generation" class="owlclass">prov:Generation</a>
       </dd>
     </dl>
   </div>
@@ -296,8 +296,8 @@
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#hadGeneration" href="#hadGeneration">prov:hadGeneration</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#hadUsage" href="#hadUsage">prov:hadUsage</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#hadUsage" href="#hadUsage">prov:hadUsage</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#hadGeneration" href="#hadGeneration">prov:hadGeneration</a> <sup class="type-op" title="object property">op</sup>
       </dd>
 
       <dt></dt>
@@ -353,7 +353,7 @@
         <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a> <sup class="type-op" title="object property">op</sup>
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#entity" href="#entity">prov:entity</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#atTime" href="#atTime">prov:atTime</a>  <sup class="type-dp" title="data property">dp</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#atTime" href="#atTime">prov:atTime</a>  <sup class="type-dp" title="data property">dp</sup>        , <a title="http://www.w3.org/ns/prov#entity" href="#entity">prov:entity</a>  <sup class="type-op" title="object property">op</sup>      </dd>
 
       <dt>in range of</dt>
       <dd>
@@ -398,14 +398,14 @@
 
       <dt>has subclasses</dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a>
-        , <a title="http://www.w3.org/ns/prov#Source" href="#Source" class="owlclass">prov:Source</a>
-        , <a title="http://www.w3.org/ns/prov#Revision" href="#Revision" class="owlclass">prov:Revision</a>
-        , <a title="http://www.w3.org/ns/prov#Quotation" href="#Quotation" class="owlclass">prov:Quotation</a>
-        , <a title="http://www.w3.org/ns/prov#Start" href="#Start" class="owlclass">prov:Start</a>
+        <a title="http://www.w3.org/ns/prov#Start" href="#Start" class="owlclass">prov:Start</a>
         , <a title="http://www.w3.org/ns/prov#End" href="#End" class="owlclass">prov:End</a>
         , <a title="http://www.w3.org/ns/prov#Derivation" href="#Derivation" class="owlclass">prov:Derivation</a>
         , <a title="http://www.w3.org/ns/prov#Trace" href="#Trace" class="owlclass">prov:Trace</a>
+        , <a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a>
+        , <a title="http://www.w3.org/ns/prov#Source" href="#Source" class="owlclass">prov:Source</a>
+        , <a title="http://www.w3.org/ns/prov#Revision" href="#Revision" class="owlclass">prov:Revision</a>
+        , <a title="http://www.w3.org/ns/prov#Quotation" href="#Quotation" class="owlclass">prov:Quotation</a>
       </dd>
     </dl>
   </div>
@@ -489,11 +489,11 @@
 
       <dt>has subclasses</dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#Invalidation" href="#Invalidation" class="owlclass">prov:Invalidation</a>
-        , <a title="http://www.w3.org/ns/prov#Start" href="#Start" class="owlclass">prov:Start</a>
-        , <a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a>
-        , <a title="http://www.w3.org/ns/prov#End" href="#End" class="owlclass">prov:End</a>
+        <a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a>
         , <a title="http://www.w3.org/ns/prov#Generation" href="#Generation" class="owlclass">prov:Generation</a>
+        , <a title="http://www.w3.org/ns/prov#End" href="#End" class="owlclass">prov:End</a>
+        , <a title="http://www.w3.org/ns/prov#Invalidation" href="#Invalidation" class="owlclass">prov:Invalidation</a>
+        , <a title="http://www.w3.org/ns/prov#Start" href="#Start" class="owlclass">prov:Start</a>
       </dd>
     </dl>
   </div>
@@ -559,9 +559,9 @@
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#involvee" href="#involvee">prov:involvee</a> <sup class="type-op" title="object property">op</sup>
         , <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#involvee" href="#involvee">prov:involvee</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a> <sup class="type-op" title="object property">op</sup>
       </dd>
 
       <dt>has subclasses</dt>
@@ -808,7 +808,7 @@
         <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a> <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a> <sup class="type-op" title="object property">op</sup>
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#entity" href="#entity">prov:entity</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#atTime" href="#atTime">prov:atTime</a>  <sup class="type-dp" title="data property">dp</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#atTime" href="#atTime">prov:atTime</a>  <sup class="type-dp" title="data property">dp</sup>        , <a title="http://www.w3.org/ns/prov#entity" href="#entity">prov:entity</a>  <sup class="type-op" title="object property">op</sup>      </dd>
 
       <dt>in range of</dt>
       <dd>
@@ -900,7 +900,7 @@
         <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a> <sup class="type-op" title="object property">op</sup>
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#entity" href="#entity">prov:entity</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#atTime" href="#atTime">prov:atTime</a>  <sup class="type-dp" title="data property">dp</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#atTime" href="#atTime">prov:atTime</a>  <sup class="type-dp" title="data property">dp</sup>        , <a title="http://www.w3.org/ns/prov#entity" href="#entity">prov:entity</a>  <sup class="type-op" title="object property">op</sup>      </dd>
 
       <dt>in range of</dt>
       <dd>
@@ -1401,21 +1401,6 @@
         <dd>
           <ul>
             <li>
-              <a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf" class="owlclass">prov:actedOnBehalfOf</a>
-            </li>
-            <li>
-              <a title="http://www.w3.org/ns/prov#wasInvalidatedBy" href="#wasInvalidatedBy" class="owlclass">prov:wasInvalidatedBy</a>
-            </li>
-            <li>
-              <a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy" class="owlclass">prov:wasStartedBy</a>
-            </li>
-            <li>
-              <a title="http://www.w3.org/ns/prov#wasEndedBy" href="#wasEndedBy" class="owlclass">prov:wasEndedBy</a>
-            </li>
-            <li>
-              <a title="http://www.w3.org/ns/prov#tracedTo" href="#tracedTo" class="owlclass">prov:tracedTo</a>
-            </li>
-            <li>
               <a title="http://www.w3.org/ns/prov#generated" href="#generated" class="owlclass">prov:generated</a>
             </li>
             <li>
@@ -1425,10 +1410,25 @@
               <a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy" class="owlclass">prov:wasGeneratedBy</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy" class="owlclass">prov:wasInformedBy</a>
+              <a title="http://www.w3.org/ns/prov#wasInvalidatedBy" href="#wasInvalidatedBy" class="owlclass">prov:wasInvalidatedBy</a>
+            </li>
+            <li>
+              <a title="http://www.w3.org/ns/prov#tracedTo" href="#tracedTo" class="owlclass">prov:tracedTo</a>
             </li>
             <li>
               <a title="http://www.w3.org/ns/prov#used" href="#used" class="owlclass">prov:used</a>
+            </li>
+            <li>
+              <a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf" class="owlclass">prov:actedOnBehalfOf</a>
+            </li>
+            <li>
+              <a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy" class="owlclass">prov:wasInformedBy</a>
+            </li>
+            <li>
+              <a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy" class="owlclass">prov:wasStartedBy</a>
+            </li>
+            <li>
+              <a title="http://www.w3.org/ns/prov#wasEndedBy" href="#wasEndedBy" class="owlclass">prov:wasEndedBy</a>
             </li>
           </ul>
         </dd>
